--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     }
   ],
   "require": {
-    "johnpbloch/wordpress": "^5.4"
+    "johnpbloch/wordpress": "^5.4",
+    "timber/timber": "^1.16"
   },
   "extra": {
     "wordpress-install-dir": "wp",
