--- a/wp-content/themes/starter-theme/package.json
+++ b/wp-content/themes/starter-theme/package.json
@@ -7,6 +7,8 @@
     "test": "tests"
   },
   "scripts": {
+    "build": "webpack",
+    "watch": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,6 +21,7 @@
     "css-loader": "^3.6.0",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
