--- a/wp-content/themes/starter-theme/package.json
+++ b/wp-content/themes/starter-theme/package.json
@@ -7,8 +7,8 @@
     "test": "tests"
   },
   "scripts": {
+    "start": "webpack --watch",
     "build": "webpack",
-    "watch": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,6 +19,8 @@
     "babel-loader": "^8.1.0",
     "browser-sync-webpack-plugin": "^2.2.2",
     "css-loader": "^3.6.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
