--- a/wp-content/themes/starter-theme/package.json
+++ b/wp-content/themes/starter-theme/package.json
@@ -17,6 +17,7 @@
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
     "css-loader": "^3.6.0",
     "mini-css-extract-plugin": "^0.9.0",
