--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 name: PHP Composer
-on:
-  workflow_dispatch:
+
+on: workflow_dispatch:
+
 jobs:
   build:
 
@@ -24,7 +25,7 @@ jobs:
       run: composer install --prefer-dist --no-progress
 
     - name: Build frontend
-      working-directory: ./wp-content/themes/coyle-carpet-one-2020/
+      working-directory: ./wp-content/themes/starter-theme
       run: |
         npm install
         npm runn build
